--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.15.3",
+    "express": "^4.16.4",
     "faker": "^4.1.0",
-    "morgan": "^1.9.0",
+    "fetch": "^1.1.0",
+    "morgan": "^1.9.1",
+    "node-fetch": "^2.2.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
     "random-js": "^1.0.8",
-    "swagger-ui-express": "^2.0.8",
-    "titleize": "^1.0.0",
-    "uuid": "^3.1.0"
+    "swagger-ui-express": "^2.0.15",
+    "titleize": "^1.0.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "node server.js"
